--- a/views/signupPage.handlebars
+++ b/views/signupPage.handlebars
@@ -1,8 +1,11 @@
 <div class="bg-gray-100 h-screen flex items-center justify-center font-roboto text-slate-950">
+  <div id="notification" class=" hidden fixed mx-auto top-0 bg-blue-500 text-slate-50 px-5 py-3 m-4 rounded shadow-lg">
+</div>
   <div class="mx-5 bg-white w-full max-w-md p-8 rounded-md shadow-lg">
     <h1 class="font-bold text-4xl mb-2 text-center">Escape Me</h1>
     <h3 class="text-lg font-bold mb-6 text-center">Virtual Escape Room Experience</h3>
     <h2 class="font-semibold text-xl mb-2">Sign Up</h2>
+    {{!-- Sign up Form --}}
     <form id="signup-form">
       <div class="mb-4">
         <label for="name" class="block text-sm font-semibold mb-2">Full Name</label>
