--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -1,6 +1,10 @@
 <div class="container mx-auto px-4 py-12">
+  <div
+      id="notification"
+      class=" hidden fixed mx-auto top-0 left-96 right-96 text-center bg-blue-500 text-slate-50 px-5 py-3 m-4 rounded shadow-lg"
+    >
+    </div>
   <h1 class="text-4xl font-bold mb-8 text-center">Book Your Escape Room</h1>
-
   <div class="bg-white shadow-lg rounded-lg p-8">
     <form id="booking-form">
       <div class="mb-6">
@@ -17,9 +21,7 @@
             <option value="{{id}}">{{theme}}: {{difficulty}}</option>
           {{/each}}
         </select>
-
       </div>
-
       <div class="mb-6">
         <label
           class="block text-gray-700 text-sm font-bold mb-2"
@@ -33,7 +35,6 @@
           required
         />
       </div>
-
       <div class="mb-6">
         <label
           class="block text-gray-700 text-sm font-bold mb-2"
@@ -49,13 +50,13 @@
       </div>
 
       <button
+      id="submit-button"
         type="submit"
         class="w-full bg-indigo-600 text-white font-bold py-3 px-4 rounded focus:outline-none focus:shadow-outline"
       >Book Now</button>
     </form>
   </div>
 </div>
-
 <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
