--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -1,4 +1,6 @@
 <div class="bg-gray-100 text-slate-950 min-h-screen flex items-center justify-center">
+<div id="notification" class=" hidden fixed mx-auto top-0 bg-blue-500 text-slate-50 px-5 py-3 m-4 rounded shadow-lg">
+</div>
 <div class="bg-white w-full max-w-md p-8 rounded-md mx-2 shadow-lg">
     <h1 class="font-bold text-4xl mb-2 text-center">Escape Me</h1>
     <h3 class="text-lg font-bold mb-6 text-center">Virtual Escape Room Experience</h3>
