--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -40,13 +40,12 @@
           class="block text-gray-700 text-sm font-bold mb-2"
           for="booking-time"
         >Select Time:</label>
-        <input
+        <select
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
           id="booking-time"
-          type="time"
           name="booking-time"
           required
-        />
+        ></select>
       </div>
 
       <button
